an actual competent developer who knows what they're doing,  which is a rare
sight in the unblocked games world.  The current competition is dominated by
people who don't  have a clue  what they're doing and use ChatGPT to  "code"
their infrastructure. No Name Games has and will stay on top of the competi-
tion.
==================================CHANGELOG=================================
12/5/2025:
[+] Fixed Fallout (Thanks for the bug report colinisdum, jaz,
ThatOneAmerican, Bleak, colin, bob & o-333)
[+] Added Clash of Vikings (Thanks for the suggestion tanter)

12/4/2025:
[!] I missed it by a while but No Name Games is now officially 1 year old!
On November 23rd, 2024 No Name Games was created and I'm very happy with how
successful this has became. Thank you guys! <3
[!] Only a small update because I'm a little busy. I'll update more later.
[+] ACTUALLY added Jacksmith, I forgot to fully add it even though I said
I did, lol. (Thanks for the bug report bevinwevin)
[+] Added Fallout (Thanks for the suggestions o-333 & ThatOneAmerican)

11/24/2025:
[+] Fixed the "Click Anywhere to Launch" not launching. Woops.

11/23/2025:
[+] Added Pizza Tower (Thanks for the suggestion BubbaNator5000 and Tanter!)

11/22/2025:
[+] Fixed Legend of Zelda: Ocarina of Time (Thanks for the bug reports
James, colinisaweiner, and ThatOneAmerican)
[+] Added Minesweeper (Thanks for the suggestion!)
[+] Added Pokémon Green (Thanks for the suggestion BIG_B!)
[+] Added Super Metroid (Thanks for the suggestion Adon!)
[+] Added Wheely 1-8 (Thanks for the suggestion Koda!)
[+] Added Yo-Kai Watch (Thanks for the suggestion M.h)
[+] Fixed Run 'n' Gun having a gun image. I assumed this was a gun game and
not a football game, sorry, lol. It's now under the 'Sports' category
[+] Added Jacksmith (Thanks for the suggestion Mason Perez and "Sorry
Martello & Kicole Nartchner")

11/16/2025:
[+] Added an A.I. assistant
[+] Added Crazy Cattle 3D

11/15/2025: