@@ -403,10 +403,11 @@
 
     <div id="mainPage" class="page visible">
         <h1 class="centered">Welcome to the No Name Games External Launcher!</h1>
-        <h3 class="centered">Last update: December 5th, 2025. <a href="javascript:openchangelog()">View changelog</a></h3>
+        <h3 class="centered">Last update: December 7th, 2025. <a href="javascript:openchangelog()">View changelog</a></h3>
         <center>
             <button onclick="window.open('https://forms.gle/iFA6kCTM8AcctsrEA')">Go to bug report form</button>
-            <button onclick="window.open('https://forms.gle/FJxL8tmAiefrrFst7')">Go to suggestion/feedback form</button>
+            <button onclick="window.open('https://forms.gle/FJxL8tmAiefrrFst7')">Go to suggestion form</button>
+            <button onclick="window.open('https://forms.gle/uR3LftEH2HZBks5CA')">Go to feedback form</button>
             <a href="" target="_blank" class="email" onclick="let js=`alert(\`Please don\'t email from a school/work email!\n\nYour emails may not send out because your school/work may be blocking emails to third-party email addresses. Your emails are also always being watched!\n\nPlease send your email from a non-monitored email address (like a personal one), if you\'d like a guaranteed response.\`);window.location.href='mailto:nonamegamescontact@proton.me'`;let scr=document.createElement('script');scr.innerHTML=js;let win=window.open('', '_blank');win.document.head.appendChild(scr)">My email (nonamegamescontact@proton.me)</a>
         </center>
         <br/>
@@ -677,6 +678,8 @@
             Contact us at <a href="mailto:nonamegamescontact@proton.me" target="_blank">nonamegamescontact@proton.me</a> (<b>Please don't email from a school/work email!</b> Your emails may not send out because your school/work may be blocking emails to third-party email addresses. Your emails are also <b>always being watched!</b>)
         </p>
         <center><button class="nav-btn" onclick="window.open('https://forms.gle/FJxL8tmAiefrrFst7')">Open Suggestion Form</button></center>
+        <br />
+        <center><button class="nav-btn" onclick="window.open('https://forms.gle/uR3LftEH2HZBks5CA')">Open Feedback Form</button></center>
         <br />
         <center><button class="nav-btn" onclick="window.open('https://forms.gle/iFA6kCTM8AcctsrEA')">Open Bug Report Form</button></center>
         <br />
